[project]
name = "s_s"
version = "0.0.0"
description = ""
authors = [
    {name = "Arwichok", email = "arwichok@gmail.com"},
]
dependencies = [
    "litestar>=2.4.4",
    "uvicorn>=0.24.0.post1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "litestar run --reload"
